--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -134,6 +134,31 @@
         app:layout_constraintGuide_begin="164dp"
         android:orientation="vertical" />
 
+    <TextView
+        android:id="@+id/Par"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Par: "
+        android:textSize="25dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/holeString"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <TextView
+        android:id="@+id/ParValue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="4"
+        android:textSize="25dp"
+        tools:layout_editor_absoluteY="56dp"
+        app:layout_constraintRight_toLeftOf="@+id/guideline2"
+        android:layout_marginRight="32dp"
+        app:layout_constraintLeft_toRightOf="@+id/Par"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/numberOfHoleID" />
+
 
 </android.support.constraint.ConstraintLayout>
 
