--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -159,6 +159,20 @@
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/numberOfHoleID" />
 
+    <Button
+        android:id="@+id/courseAdder"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add course"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/scoreCountID"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/counterUpID" />
+
 
 </android.support.constraint.ConstraintLayout>
 
