--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -173,6 +173,18 @@
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/counterUpID" />
 
+    <TextView
+        android:id="@+id/locText"
+        android:layout_width="124dp"
+        android:layout_height="42dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:text="location"
+        android:textSize="25sp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="252dp" />
+
 
 </android.support.constraint.ConstraintLayout>
 
